tests/paczka1/fuzzy1/53691683.err
Error in line 2: AhV88Vb S827 56,0
Error in line 5: zawrJHQeIGB S827 41,1
Error in line 16: wWYY8xD S454 82,2
Error in line 24: KwGc9Stfxin S827 31,4
